kubernetes/apps/default/hydrus-network/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydrus-network-web
  labels: &labels
    app.kubernetes.io/part-of: hydrus-network
    app.kubernetes.io/name: hydrus-network-web
    app.kubernetes.io/component: web
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      containers:
        - name: hydrus-network-web
          image: ghcr.io/floogulinc/hydrus-web
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
